--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@
     width: 100;
     padding: 10px;
     border-radius: 10px;
-    border: 1px solid rgba(0,0,0,0.3);
-    color:#444
+   id rgba(0,0,0,0.3);
+    co border: 1px sollor:#444
 }
 
 .container form .flexBox{
@@ -47,3 +47,20 @@
     flex:1 1 150px;
 }
 
+.container form .submit-btn{
+    width: 100%;
+    background:linear-gradient(45deg,#ff105f,#ffad06);
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 20px;
+    color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .2s linear;
+    break-before: 5px;
+}
+
+.container form .submit-btn:hover{
+    letter-spacing: 2px;
+    opacity: .8;
+}
