--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@
     width: 100;
     padding: 10px;
     border-radius: 10px;
-   id rgba(0,0,0,0.3);
-    co border: 1px sollor:#444
+    border: 1px solid rgba(0,0,0,0.3);
+    color:#444
 }
 
 .container form .flexBox{
@@ -57,7 +57,6 @@
     border-radius: 10px;
     cursor: pointer;
     transition: .2s linear;
-    break-before: 5px;
 }
 
 .container form .submit-btn:hover{
