gradient submit btn

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 
 .container form .submit-btn{
     width: 100%;
-    background:linear-gradient(45deg,#ff105f,#ffad06);
+    background:linear-gradient(45deg,#ee231e, #84bc17);
     margin-top: 20px;
     padding: 10px;
     font-size: 20px;
